--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                                     href="https://github.com/hungrypc">github/hungrypc</a></p>
                             <p class="ab"><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p>
                             <p class="ab"><i class="fab fa-linkedin-in"></i> &nbsp <a
-                                    href="https://www.linkedin.com/in/philip-chan-aa859b143/">linkedin</a></p>
+                                    href="https://www.linkedin.com/in/philip-chan-aa859b143/">linkedin</a>
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- <hr class="fancy-line"></hr> -->
 
             <div id="start-directory">
                 <div id="profile-about">
@@ -74,104 +74,151 @@
                         </ul>
                     </div>
                 </div>
-
-                <a href="#projects-content">
-                    <h1 class="projects sd" data-text="PROJECTS">PROJECTS</h1>
-                </a>
-                <a href="#employment-content">
-                    <h1 class="employment sd" data-text="WORK">WORK</h1>
-                </a>
-                <a href="#education-content">
-                    <h1 class="education sd" data-text="EDUCATION">EDUCATION</h1>
-                </a>
+                <div id="directory">
+                    <a href="#projects-content">
+                        <h1 class="projects sd" data-text="PROJECTS">PROJECTS</h1>
+                    </a>
+                    <a href="#employment-content">
+                        <h1 class="employment sd" data-text="WORK">WORK</h1>
+                    </a>
+                    <a href="#education-content">
+                        <h1 class="education sd" data-text="EDUCATION">EDUCATION</h1>
+                    </a>
+                </div>
             </div>
-
 
             <div id="content-box">
                 <div class="slide" id="projects-content">
                     <h3>PROJECTS</h3>
-                    <h5>Wander</h5>
-                    <p><strong><i>React, Rails, GoogleMaps API </i></strong><br />
-                        A trip planning app that allows users to collaborate when creating itineries. Users are also
-                        able to split the trip into separate days with specific itinerary items where each item is
-                        displayed on the map.</p>
-                    <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
-                    <h5>Chattyapp</h5>
-                    <p><strong><i>React, Websockets</i></strong><br />
-                        A small instant messaging application. The application contains all basic functions of a
-                        chatroom: creating a unique username, joining chatrooms, and converse with other users.</p>
-                    <a href="https://github.com/hungrypc/chattyapp" target="_blank">view on github</a>
-                    <h5>Schoodle</h5>
-                    <p><strong><i>Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL,
-                                Knex</i></strong><br />
-                        Schoodle is a full stack web application that allows users to create events and invite
-                        participants with a randomly generated event URL.
-                        it is a group midterm project where I was mainly responsible for front-end work but contributed
-                        to the back-end as well</p>
-                    <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view on github</a> <a
-                        href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
-                    <h5>Tweeter</h5>
-                    <p><strong><i>Node.js, Express, JavaScript, jQuery, AJAX, MongoDB, HTML, CSS</i></strong><br />
-                        Tweeter is a simple, single-page Twitter clone. Built upon to implement newly learned skills</p>
-                    <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
-                    <h5>TinyApp</h5>
-                    <p><strong><i>Node.js, Express, HTML, CSS</i></strong><br />
-                        A simple URL-shortening web application. First week-long project at Lighthouse Labs. Project
-                        necessitated a thorough understanding of how HTTP works, templating, and the value of modular
-                        code.</p>
-                    <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
+                    <div class="slide-block">
+                        <h5>Wander</h5>
+                        <div class="techstack">
+                            React, Rails, GoogleMaps API
+                        </div>
+                        <p>
+                            A trip planning app that allows users to collaborate when creating itineries. Users are also
+                            able to split the trip into separate days with specific itinerary items where each item is
+                            displayed on the map.
+                        </p>
+                        <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
+                    </div>
+                    <div class="slide-block">
+                        <h5>Chattyapp</h5>
+                        <div class="techstack">
+                            React, Websockets
+                        </div>
+                        <p>
+                            A small instant messaging application. The application contains all basic functions of a
+                            chatroom: creating a unique username, joining chatrooms, and converse with other users.
+                        </p>
+                        <a href="https://github.com/hungrypc/chattyapp" target="_blank">view on github</a>
+                    </div>
+                    <div class="slide-block">
+                        <h5>Schoodle</h5>
+                        <div class="techstack">
+                            Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL, Knex
+                        </div>
+                        <p>
+                            Schoodle is a full stack web application that allows users to create events and invite
+                            participants with a randomly generated event URL.
+                            it is a group midterm project where I was mainly responsible for front-end work but
+                            contributed
+                            to the back-end as well.
+                        </p>
+                        <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view on github</a>
+                        &nbsp
+                        <a href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
+                    </div>
+                    <div class="slide-block">
+                        <h5>Tweeter</h5>
+                        <div class="techstack">
+                            Node.js, Express, JavaScript, jQuery, AJAX, MongoDB, HTML, CSS
+                        </div>
+                        <p>
+                            Tweeter is a simple, single-page Twitter clone. Built upon to implement newly learned
+                            skills.
+                        </p>
+                        <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
+                    </div>
+                    <div class="slide-block">
+                        <h5>TinyApp</h5>
+                        <div class="techstack">
+                            Node.js, Express, HTML, CSS
+                        </div>
+                        <p>
+                            A simple URL-shortening web application. First week-long project at Lighthouse Labs. Project
+                            necessitated a thorough understanding of how HTTP works, templating, and the value of
+                            modular
+                            code.
+                        </p>
+                        <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
+                    </div>
                 </div>
+
                 <div class="slide" id="employment-content">
                     <h3>EMPLOYMENT</h3>
-                    <h5>Sales Associate</h5>
-                    <div class="info">Ingledew's Shoes</div>
-                    <div class="location">Vancouver, BC</div>
-                    <div class="year">Jan 2017 - Jul 2017</div>
-                    <ul>
-                        <li>Provided customer service while representing high-fashion brands</li>
-                        <li>Consistently achieved above target sale goals</li>
-                        <li>Performed sales support functions on POS systems</li>
-                    </ul>
-                    <h5>Human Resources/Administrative Intern</h5>
-                    <div class="info">Moregoal Industries, ltd</div>
-                    <div class="location">Hong Kong</div>
-                    <div class="year">May 2016 - Aug 2016</div>
-                    <ul>
-                        <li>Organized large scale inventory and stock</li>
-                        <li>Provided service to customer inquiry and handled paper filing</li>
-                        <li>Utilized microsoft word and excel to implement business solutions</li>
-                    </ul>
+                    <div class="slide-block">
+                        <h5>Sales Associate</h5>
+                        <div class="info">Ingledew's Shoes</div>
+                        <div class="location">Vancouver, BC</div>
+                        <div class="year">Jan 2017 - Jul 2017</div>
+                        <ul>
+                            <li>Provided customer service while representing high-fashion brands</li>
+                            <li>Consistently achieved above target sale goals</li>
+                            <li>Performed sales support functions on POS systems</li>
+                        </ul>
+                    </div>
+                    <div class="slide-block">
+                        <h5>Human Resources/Administrative Intern</h5>
+                        <div class="info">Moregoal Industries, ltd</div>
+                        <div class="location">Hong Kong</div>
+                        <div class="year">May 2016 - Aug 2016</div>
+                        <ul>
+                            <li>Organized large scale inventory and stock</li>
+                            <li>Provided service to customer inquiry and handled paper filing</li>
+                            <li>Utilized microsoft word and excel to implement business solutions</li>
+                        </ul>
+                    </div>
 
                     <h3>OTHER WORK EXP</h3>
-                    <h5>Volunteer</h5>
-                    <div class="info">Vancouver Start-up Week</div>
-                    <div class="location">Vancouver, BC</div>
-                    <div class="year">Sep 2018</div>
-                    <ul>
-                        <li>Checked in attendees using Sched Count app</li>
-                        <li>Provided service and information for large events, including the largest event of the week
-                            (Recruitment Fair)</li>
-                    </ul>
+                    <div class="slide-block">
+                        <h5>Volunteer</h5>
+                        <div class="info">Vancouver Start-up Week</div>
+                        <div class="location">Vancouver, BC</div>
+                        <div class="year">Sep 2018</div>
+                        <ul>
+                            <li>Checked in attendees using Sched Count app</li>
+                            <li>Provided service and information for large events, including the largest event of the
+                                week
+                                (Recruitment Fair)</li>
+                        </ul>
+                    </div>
                 </div>
+
                 <div class="slide" id="education-content">
                     <h3>EDUCATION</h3>
-                    <h5>Lighthouse Labs</h5>
-                    <div class="ed-info">Web Development Diploma</div>
-                    <div class="ed-year">August 2019</div>
-                    <p>A 600 hour 10 week full-stack bootcamp covering topics such as JavaScript, React, Node.js
-                        MongoDB, PostgreSQL, Ruby, Ruby on Rails, jQuery, HTML, CSS, and SASS, computer science, and
-                        software architecture.</p>
-
-                    <h5>University of British Columbia</h5>
-                    <div class="ed-info">Bachelor of Arts</div>
-                    <div class="ed-year">2012 - 2018</div>
-                    <p>Psychology</p>
-
-                    <h5>The Chinese University of Hong Kong</h5>
-                    <div class="ed-info">Summer Exchange</div>
-                    <div class="ed-year">May 2015 - Aug 2015</div>
-                    <p>International Business</p>
-
+                    <div class="slide-block">
+                        <h5>Lighthouse Labs</h5>
+                        <div class="ed-info">Web Development Diploma</div>
+                        <div class="ed-year">Aug 2019</div>
+                        <p>
+                            A 600 hour 10 week full-stack bootcamp covering topics such as JavaScript, React, Node.js
+                            MongoDB, PostgreSQL, Ruby, Ruby on Rails, jQuery, HTML, CSS, and SASS, computer science, and
+                            software architecture.
+                        </p>
+                    </div>
+                    <div class="slide-block">
+                        <h5>University of British Columbia</h5>
+                        <div class="ed-info">Bachelor of Arts</div>
+                        <div class="ed-year">2012 - 2018</div>
+                        <p>Psychology</p>
+                    </div>
+                    <div class="slide-block">
+                        <h5>The Chinese University of Hong Kong</h5>
+                        <div class="ed-info">Summer Exchange</div>
+                        <div class="ed-year">May 2015 - Aug 2015</div>
+                        <p>International Business</p>
+                    </div>
                 </div>
             </div>
 
