--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     <div class="contact">
                         <div class="contact-details">
                             <p class="ab"><i class="far fa-envelope"></i> &nbsp <a
-                                    href="mailto:philipchanhk626@gmail.com">philipchanhk626@gmail.com</a></p>
+                                    href="mailto:philipchanhk626@gmail.com" target="_blank">philipchanhk626@gmail.com</a></p>
                             <p class="ab"><i class="fab fa-github"></i> &nbsp <a
-                                    href="https://github.com/hungrypc">github/hungrypc</a></p>
+                                    href="https://github.com/hungrypc" target="_blank">github/hungrypc</a></p>
                             <p class="ab"><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p>
                             <p class="ab"><i class="fab fa-linkedin-in"></i> &nbsp <a
-                                    href="https://www.linkedin.com/in/philip-chan-aa859b143/">linkedin</a>
+                                    href="https://www.linkedin.com/in/philip-chan-aa859b143/" target="_blank">linkedin</a>
                             </p>
                         </div>
                     </div>
