--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                             React, Rails, GoogleMaps API
                         </div>
                         <p>
-                            A trip planning app that allows users to collaborate when creating itineries. Users are also
-                            able to split the trip into separate days with specific itinerary items where each item is
-                            displayed on the map.
+                            A simple trip planning app that allows users to collaborate when creating holiday itineries. Users are also
+                            able to split the trip into separate days with specific itinerary items where each item's location is
+                            displayed with a marker on the map. Users can also view previously made trip itineraries.
                         </p>
                         <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
                     </div>
@@ -158,14 +158,25 @@
                 <div class="slide" id="employment-content">
                     <h3>EMPLOYMENT</h3>
                     <div class="slide-block">
+                            <h5>Admissions Assistant</h5>
+                            <div class="info">Langara College</div>
+                            <div class="location">Vancouver, BC</div>
+                            <div class="year">Oct 2018 - Dec 2018</div>
+                            <ul>
+                                <li>Reviewed applications submitted to the college with the Oracle system - checked for required documents and admission requirements on which admission decisions would be made</li>
+                                <li>Answered emails and phone calls that were directed to the admissions office regarding the application process</li>
+                                <li>Reviewed over 1500 applications and was the fastest processor within the office</li>
+                            </ul>
+                        </div>
+                    <div class="slide-block">
                         <h5>Sales Associate</h5>
                         <div class="info">Ingledew's Shoes</div>
                         <div class="location">Vancouver, BC</div>
                         <div class="year">Jan 2017 - Jul 2017</div>
                         <ul>
-                            <li>Provided customer service while representing high-fashion brands</li>
-                            <li>Consistently achieved above target sale goals</li>
-                            <li>Performed sales support functions on POS systems</li>
+                            <li>Provided customer service while representing a multitude of high-fashion brands</li>
+                            <li>Frequently achieved above target sale goal of $1000</li>
+                            <li>Performed sales support functions on POS systems and was able to handle large numbers of customers during hectic sales</li>
                         </ul>
                     </div>
                     <div class="slide-block">
@@ -188,9 +199,7 @@
                         <div class="year">Sep 2018</div>
                         <ul>
                             <li>Checked in attendees using Sched Count app</li>
-                            <li>Provided service and information for large events, including the largest event of the
-                                week
-                                (Recruitment Fair)</li>
+                            <li>Provided service and information for large events, including the Recruitment Fair with over 2000 participants</li>
                         </ul>
                     </div>
                 </div>
