more small changes

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     </div>
                     <div id="profile-intro">
                         <div class="hi">Hi, I'm Phil Chan</div>
-                        <p>Junior Full Stack Web Developer with an interest for design and creative problem solving.
-                            Detail-driven, efficieny-oriented, and a dedicated life-long learner who is always eager to
+                        <p>Junior Full Stack Web Developer with an apetite for creative media and design.&nbsp
+                            A digital-native who is obsessed with the smaller details and is constantly looking for solutions that are both quick and efficient.&nbsp As a life-long learner, I am always excited to
                             discover new things.</p>
                     </div>
                     <div class="contact">
@@ -165,7 +165,7 @@
                             <ul>
                                 <li>Reviewed applications submitted to the college with the Oracle system - checked for required documents and admission requirements on which admission decisions would be made</li>
                                 <li>Answered emails and phone calls that were directed to the admissions office regarding the application process</li>
-                                <li>Reviewed over 1500 applications and was the fastest processor within the office</li>
+                                <li>Reviewed over 1500 applications and was the fastest processor within the office (extended daily responsibilities to the International department due to finishing Domestic applications early)</li>
                             </ul>
                         </div>
                     <div class="slide-block">
@@ -174,9 +174,9 @@
                         <div class="location">Vancouver, BC</div>
                         <div class="year">Jan 2017 - Jul 2017</div>
                         <ul>
-                            <li>Provided customer service while representing a multitude of high-fashion brands</li>
+                            <li>Provided personal customer service while representing a multitude of high-fashion brands</li>
                             <li>Frequently achieved above target sale goal of $1000</li>
-                            <li>Performed sales support functions on POS systems and was able to handle large numbers of customers during hectic sales</li>
+                            <li>Performed sales support functions on POS systems and was able to handle large numbers of customers during massive sales</li>
                         </ul>
                     </div>
                     <div class="slide-block">
