--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                             </div>
                             <div class="profile-intro">
                                 <div class="profile-intro-content mod">
-                                    Junior Full Stack Web Developer with an apetite for creative media and design.&nbsp
-                                    A digital-native who is obsessed with the smaller details and is constantly looking
+                                    Junior Full Stack Web Developer with an appetite for creative media and design.&nbsp
+                                    A digital-native who is obsessed with the smaller details and constantly looking
                                     for solutions that are both quick and efficient.&nbsp As a life-long learner, I am
                                     always excited to
                                     discover new things.
@@ -215,7 +215,7 @@
                                 <div class="location">Vancouver, BC</div>
                                 <div class="year">Oct 2018 - Dec 2018</div>
                                 <ul>
-                                    <li>Reviewed applications submitted to the college with the Oracle system - checked
+                                    <li>Analyzed applications submitted to the college with the Oracle system - checked
                                         for required documents and admission requirements on which admission decisions
                                         would be made</li>
                                     <li>Answered emails and phone calls that were directed to the admissions office
@@ -231,7 +231,7 @@
                                 <div class="location">Vancouver, BC</div>
                                 <div class="year">Jan 2017 - Jul 2017</div>
                                 <ul>
-                                    <li>Provided personal customer service while representing a multitude of
+                                    <li>Arranged personal customer service while representing a multitude of
                                         high-fashion brands</li>
                                     <li>Frequently achieved above target sale goal of $1000</li>
                                     <li>Performed sales support functions on POS systems and was able to handle large
@@ -281,7 +281,7 @@
                             <div class="slide-block">
                                 <h5>University of British Columbia</h5>
                                 <div class="ed-info">Bachelor of Arts</div>
-                                <div class="ed-year">2012 - 2018</div>
+                                <div class="ed-year">Dec 2018</div>
                                 <p>Psychology</p>
                             </div>
                             <div class="slide-block">
