--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             </div>
                             <div class="profile-intro">
                                 <div class="profile-intro-content mod">
-                                    Junior Full Stack Web Developer with an appetite for creative media and design.&nbsp
+                                    I'm a Full Stack Web Developer with an appetite for creative media and design.&nbsp
                                     A digital-native who is obsessed with the smaller details and constantly looking
                                     for solutions that are both quick and efficient.&nbsp As a life-long learner, I am
                                     always excited to
