--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content page-section" id="4">
+            <div class="content page-section last" id="4">
                 <div class="tab-wrapper mod">
                     <ul id="tabs">
                         <li><a id="tab1">Employment</a></li>
