new projects display

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                         </a>
                                     </div>
                                     <div class="contact-block mod">
-                                        <a>
+                                        <a href="assets/Philip Chan - Resume.pdf" target="_blank">
                                             <i class="fas fa-file-alt"></i>
                                         </a>
                                     </div>
@@ -102,6 +102,8 @@
                         <div class="profile-block">
                             <div class="skills mod">
                                 <div>Languages & Frameworks</div>
+                                <!-- <p>JavaScript / jQuery / Node / AJAX / Express / React / HTML5 / CSS3 / SASS / Bootstrap
+                                    / Ruby on Rails</p> -->
                                 <ul>
                                     <li>JavaScript, jQuery, Node, AJAX, Express, React</li>
                                     <li>HTML5, CSS3, SASS, Bootstrap</li>
@@ -129,8 +131,35 @@
             <div class="content page-section" id="3">
                 <div class="content-wrapper">
                     <div class="title">PROJECTS</div>
-                    <div class="projects-container mod">
-                        <div class="slide-block">
+                    <div class="projects-container">
+
+                        <div class="project-wrap mod">
+                            <div></div>
+                            <img src="assets/images/wander.png">
+                        </div>
+                        <div class="project-wrap mod">
+                            <div></div>
+                            <img src="assets/images/chatty.png">
+                        </div>
+                        <div class="project-wrap mod">
+                            <div></div>
+                            <img src="assets/images/schoodle.png">
+                        </div>
+                        <div class="project-wrap mod">
+                            <div></div> 
+                            <img src="assets/images/tweeter.png">
+                        </div>
+                        <div class="project-wrap mod">
+                            <div></div>
+                            <img src="assets/images/tiny.png">
+                        </div>
+
+                        <div class="project-wrap mod hidden">
+
+                        </div>
+
+
+                        <!-- <div class="slide-block">
                             <h5>Wander</h5>
                             <div class="techstack">
                                 React, Rails, GoogleMaps API
@@ -197,7 +226,7 @@
                                 code.
                             </p>
                             <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
