--- a/index.html
+++ b/index.html
@@ -31,34 +31,38 @@
             </a>
         </div>
 
-        <nav class="navigation navbar navbar-expand-lg navbar-light">
-            <div class="navigation-container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
 
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#1">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#2">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#3">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#4">Employment/Education</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-        </nav>
 
         <div id="content-box">
+            <div class="nav-wrapper" style="height:60px;">
+                <nav class="navigation navbar navbar-expand-lg navbar-light">
+                    <div class="navigation-container">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#1">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#2">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#3">Projects</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#4">Employment/Education</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+
             <div class="content page-section" id="2">
                 <div class="content-wrapper">
                     <div class="title">ABOUT</div>
@@ -134,23 +138,109 @@
                     <div class="projects-container">
 
                         <div class="project-wrap mod">
-                            <div></div>
+                            <div class="project-info">
+                                <div class="back"></div>
+                                <div class="slide-block">
+                                    <h5>Wander</h5>
+                                    <div class="techstack">
+                                        React, Rails, GoogleMaps API
+                                    </div>
+                                    <p>
+                                        A simple trip planning app that allows users to collaborate when creating
+                                        holiday
+                                        itineries. Users are also
+                                        able to split the trip into separate days with specific itinerary items where
+                                        each
+                                        item's location is
+                                        displayed with a marker on the map. Users can also view previously made trip
+                                        itineraries.
+                                    </p>
+                                    <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
+                                </div>
+                            </div>
                             <img src="assets/images/wander.png">
                         </div>
                         <div class="project-wrap mod">
-                            <div></div>
+                            <div class="project-info">
+                                <div class="back"></div>
+                                <div class="slide-block">
+                                    <h5>Chattyapp</h5>
+                                    <div class="techstack">
+                                        React, Websockets
+                                    </div>
+                                    <p>
+                                        A small instant messaging application. The application contains all basic
+                                        functions
+                                        of a
+                                        chatroom: creating a unique username, joining chatrooms, and converse with other
+                                        users.
+                                    </p>
+                                    <a href="https://github.com/hungrypc/chattyapp" target="_blank">view on github</a>
+                                </div>
+                            </div>
                             <img src="assets/images/chatty.png">
                         </div>
                         <div class="project-wrap mod">
-                            <div></div>
+                            <div class="project-info">
+                                <div class="back"></div>
+                                <div class="slide-block">
+                                    <h5>Schoodle</h5>
+                                    <div class="techstack">
+                                        Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL, Knex
+                                    </div>
+                                    <p>
+                                        Schoodle is a full stack web application that allows users to create events and
+                                        invite
+                                        participants with a randomly generated event URL.
+                                    </p>
+                                    <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view
+                                        on
+                                        github</a>
+                                    &nbsp
+                                    <a href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
+                                </div>
+                            </div>
                             <img src="assets/images/schoodle.png">
                         </div>
                         <div class="project-wrap mod">
-                            <div></div> 
+                            <div class="project-info">
+                                <div class="back"></div>
+                                <div class="slide-block">
+                                    <h5>Tweeter</h5>
+                                    <div class="techstack">
+                                        Node.js, Express, JavaScript, jQuery, AJAX, MongoDB, HTML, CSS
+                                    </div>
+                                    <p>
+                                        Tweeter is a simple, single-page Twitter clone. Built upon to implement newly
+                                        learned
+                                        skills.
+                                    </p>
+                                    <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
+                                </div>
+                            </div>
                             <img src="assets/images/tweeter.png">
                         </div>
                         <div class="project-wrap mod">
-                            <div></div>
+                            <div class="project-info">
+                                <div class="back"></div>
+                                <div class="slide-block">
+                                    <h5>TinyApp</h5>
+                                    <div class="techstack">
+                                        Node.js, Express, HTML, CSS
+                                    </div>
+                                    <p>
+                                        A simple URL-shortening web application. First week-long project at Lighthouse
+                                        Labs.
+                                        Project
+                                        necessitated a thorough understanding of how HTTP works, templating, and the
+                                        value
+                                        of
+                                        modular
+                                        code.
+                                    </p>
+                                    <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
+                                </div>
+                            </div>
                             <img src="assets/images/tiny.png">
                         </div>
 
@@ -158,75 +248,86 @@
 
                         </div>
 
+                        <div class="projects-mobile">
+                            <div class="slide-block">
+                                <h5>Wander</h5>
+                                <div class="techstack">
+                                    React, Rails, GoogleMaps API
+                                </div>
+                                <p>
+                                    A simple trip planning app that allows users to collaborate when creating
+                                    holiday
+                                    itineries. Users are also
+                                    able to split the trip into separate days with specific itinerary items where
+                                    each
+                                    item's location is
+                                    displayed with a marker on the map. Users can also view previously made trip
+                                    itineraries.
+                                </p>
+                                <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
+                            </div>
 
-                        <!-- <div class="slide-block">
-                            <h5>Wander</h5>
-                            <div class="techstack">
-                                React, Rails, GoogleMaps API
+                            <div class="slide-block">
+                                <h5>Chattyapp</h5>
+                                <div class="techstack">
+                                    React, Websockets
+                                </div>
+                                <p>
+                                    A small instant messaging application. The application contains all basic functions
+                                    of a
+                                    chatroom: creating a unique username, joining chatrooms, and converse with other
+                                    users.
+                                </p>
+                                <a href="https://github.com/hungrypc/chattyapp" target="_blank">view on github</a>
                             </div>
-                            <p>
-                                A simple trip planning app that allows users to collaborate when creating holiday
-                                itineries. Users are also
-                                able to split the trip into separate days with specific itinerary items where each
-                                item's location is
-                                displayed with a marker on the map. Users can also view previously made trip
-                                itineraries.
-                            </p>
-                            <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
+                            <div class="slide-block">
+                                <h5>Schoodle</h5>
+                                <div class="techstack">
+                                    Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL, Knex
+                                </div>
+                                <p>
+                                    Schoodle is a full stack web application that allows users to create events and
+                                    invite
+                                    participants with a randomly generated event URL.
+                                    it is a group midterm project where I was mainly responsible for front-end work but
+                                    contributed
+                                    to the back-end as well.
+                                </p>
+                                <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view on
+                                    github</a>
+                                &nbsp
+                                <a href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
+                            </div>
+                            <div class="slide-block">
+                                <h5>Tweeter</h5>
+                                <div class="techstack">
+                                    Node.js, Express, JavaScript, jQuery, AJAX, MongoDB, HTML, CSS
+                                </div>
+                                <p>
+                                    Tweeter is a simple, single-page Twitter clone. Built upon to implement newly
+                                    learned
+                                    skills.
+                                </p>
+                                <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
+                            </div>
+                            <div class="slide-block">
+                                <h5>TinyApp</h5>
+                                <div class="techstack">
+                                    Node.js, Express, HTML, CSS
+                                </div>
+                                <p>
+                                    A simple URL-shortening web application. First week-long project at Lighthouse Labs.
+                                    Project
+                                    necessitated a thorough understanding of how HTTP works, templating, and the value
+                                    of
+                                    modular
+                                    code.
+                                </p>
+                                <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
+                            </div>
                         </div>
-                        <div class="slide-block">
-                            <h5>Chattyapp</h5>
-                            <div class="techstack">
-                                React, Websockets
-                            </div>
-                            <p>
-                                A small instant messaging application. The application contains all basic functions of a
-                                chatroom: creating a unique username, joining chatrooms, and converse with other users.
-                            </p>
-                            <a href="https://github.com/hungrypc/chattyapp" target="_blank">view on github</a>
-                        </div>
-                        <div class="slide-block">
-                            <h5>Schoodle</h5>
-                            <div class="techstack">
-                                Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL, Knex
-                            </div>
-                            <p>
-                                Schoodle is a full stack web application that allows users to create events and invite
-                                participants with a randomly generated event URL.
-                                it is a group midterm project where I was mainly responsible for front-end work but
-                                contributed
-                                to the back-end as well.
-                            </p>
-                            <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view on
-                                github</a>
-                            &nbsp
-                            <a href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
-                        </div>
-                        <div class="slide-block">
-                            <h5>Tweeter</h5>
-                            <div class="techstack">
-                                Node.js, Express, JavaScript, jQuery, AJAX, MongoDB, HTML, CSS
-                            </div>
-                            <p>
-                                Tweeter is a simple, single-page Twitter clone. Built upon to implement newly learned
-                                skills.
-                            </p>
-                            <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
-                        </div>
-                        <div class="slide-block">
-                            <h5>TinyApp</h5>
-                            <div class="techstack">
-                                Node.js, Express, HTML, CSS
-                            </div>
-                            <p>
-                                A simple URL-shortening web application. First week-long project at Lighthouse Labs.
-                                Project
-                                necessitated a thorough understanding of how HTTP works, templating, and the value of
-                                modular
-                                code.
-                            </p>
-                            <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
-                        </div> -->
+
+
                     </div>
                 </div>
             </div>
