fade in transition for projects

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                         <div class="project-wrap mod">
                             <div class="project-info">
-                                <div class="back"></div>
+                                <!-- <div class="back"></div> -->
                                 <div class="slide-block">
                                     <h5>Wander</h5>
                                     <div class="techstack">
@@ -148,14 +148,11 @@
                                     <p>
                                         A simple trip planning app that allows users to collaborate when creating
                                         holiday
-                                        itineries. Users are also
-                                        able to split the trip into separate days with specific itinerary items where
-                                        each
-                                        item's location is
-                                        displayed with a marker on the map. Users can also view previously made trip
-                                        itineraries.
+                                        itineries.
                                     </p>
-                                    <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
+                                    <p class="view-on">
+                                            <a href="https://github.com/hungrypc/tripper" target="_blank">view on github</a>
+                                    </p>                                    
                                 </div>
                             </div>
                             <img src="assets/images/wander.png">
@@ -175,7 +172,9 @@
                                         chatroom: creating a unique username, joining chatrooms, and converse with other
                                         users.
                                     </p>
-                                    <a href="https://github.com/hungrypc/chattyapp" target="_blank">view on github</a>
+                                    <p class="view-on">
+                                            <a href="https://github.com/hungrypc/chattyapp" target="_blank">view on github</a>
+                                    </p>                                    
                                 </div>
                             </div>
                             <img src="assets/images/chatty.png">
@@ -193,11 +192,14 @@
                                         invite
                                         participants with a randomly generated event URL.
                                     </p>
-                                    <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view
-                                        on
-                                        github</a>
-                                    &nbsp
-                                    <a href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
+                                    <p class="view-on">
+                                        <a href="https://github.com/yanlinchengrui/schoodle_skeleton"
+                                            target="_blank">view
+                                            on
+                                            github</a>
+                                        &nbsp
+                                        <a href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
+                                    </p>
                                 </div>
                             </div>
                             <img src="assets/images/schoodle.png">
@@ -215,7 +217,9 @@
                                         learned
                                         skills.
                                     </p>
-                                    <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
+                                    <p class="view-on">
+                                            <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
+                                    </p>                                    
                                 </div>
                             </div>
                             <img src="assets/images/tweeter.png">
@@ -238,7 +242,9 @@
                                         modular
                                         code.
                                     </p>
-                                    <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
+                                    <p class="view-on">
+                                            <a href="https://github.com/hungrypc/Tiny-App" target="_blank">view on github</a>
+                                    </p>                                    
                                 </div>
                             </div>
                             <img src="assets/images/tiny.png">
@@ -379,8 +385,6 @@
                                     <li>Utilized microsoft word and excel to implement business solutions</li>
                                 </ul>
                             </div>
-
-                            <h3>OTHER WORK EXP</h3>
                             <div class="slide-block">
                                 <h5>Volunteer</h5>
                                 <div class="info">Vancouver Start-up Week</div>
