new projects display

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     <div class="techstack">
                                         React, Rails, GoogleMaps API
                                     </div>
-                                    <p>
+                                    <p class="project-about">
                                         A simple trip planning app that allows users to collaborate when creating
                                         holiday
                                         itineries.
@@ -165,11 +165,11 @@
                                     <div class="techstack">
                                         React, Websockets
                                     </div>
-                                    <p>
-                                        A small instant messaging application. The application contains all basic
+                                    <p class="project-about">
+                                        A small instant messaging app. The application contains all basic
                                         functions
                                         of a
-                                        chatroom: creating a unique username, joining chatrooms, and converse with other
+                                        chatroom: unique username, joining chatrooms, and converse with other
                                         users.
                                     </p>
                                     <p class="view-on">
@@ -185,10 +185,10 @@
                                 <div class="slide-block">
                                     <h5>Schoodle</h5>
                                     <div class="techstack">
-                                        Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL, Knex
+                                        Node.js, Express, EJS, jQuery, AJAX, Sass, Bootstrap, PostgresSQL, Knex
                                     </div>
-                                    <p>
-                                        Schoodle is a full stack web application that allows users to create events and
+                                    <p class="project-about">
+                                        Schoodle is a web application that allows users to create events and
                                         invite
                                         participants with a randomly generated event URL.
                                     </p>
@@ -197,7 +197,7 @@
                                             target="_blank">view
                                             on
                                             github</a>
-                                        &nbsp
+                                        &nbsp&nbsp
                                         <a href="https://skooodle.herokuapp.com" target="_blank">view on heroku</a>
                                     </p>
                                 </div>
@@ -212,7 +212,7 @@
                                     <div class="techstack">
                                         Node.js, Express, JavaScript, jQuery, AJAX, MongoDB, HTML, CSS
                                     </div>
-                                    <p>
+                                    <p class="project-about">
                                         Tweeter is a simple, single-page Twitter clone. Built upon to implement newly
                                         learned
                                         skills.
@@ -232,11 +232,11 @@
                                     <div class="techstack">
                                         Node.js, Express, HTML, CSS
                                     </div>
-                                    <p>
+                                    <p class="project-about">
                                         A simple URL-shortening web application. First week-long project at Lighthouse
                                         Labs.
                                         Project
-                                        necessitated a thorough understanding of how HTTP works, templating, and the
+                                        required a thorough understanding of how HTTP works, templating, and the
                                         value
                                         of
                                         modular
